--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,22 @@ dependencies:
   flutter_typeahead: ^4.6.2
   http: ^1.1.0
   google_places_flutter: ^2.0.6
+  flutter_animate: ^4.2.0+1
+  firebase_core: ^2.15.0
+  firebase_messaging: ^14.6.4
+  drift: ^2.10.0
+  sqlite3_flutter_libs: ^0.5.15
+  path_provider: ^2.1.0
+  path: ^1.8.3
+  drift_dev: ^2.11.0
+  sembast: ^3.5.0+1
+  dio: ^4.0.6
+  flutter_facebook_auth: ^6.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -55,21 +67,26 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
